--- a/github/workflows/ci-cd.yml
+++ b/github/workflows/ci-cd.yml
@@ -32,8 +32,8 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     # Run tests
-    - name: Run tests
-      run: dotnet test --no-build --verbosity normal
+    #- name: Run tests
+    #  run: dotnet test --no-build --verbosity normal
 
     # Build Docker image
     - name: Build Docker image
