--- a/github/workflows/ci-cd.yml
+++ b/github/workflows/ci-cd.yml
@@ -37,13 +37,13 @@ jobs:
 
     # Build Docker image
     - name: Build Docker image
-      run: docker build -t your-dockerhub-username/your-app-name:${{ github.sha }} .
+      run: docker build -t jainsachin8/dockerapi:${{ github.sha }} .
 
     # Push Docker image to Docker Hub
     - name: Push Docker image to Docker Hub
       run: |
         echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
-        docker push your-dockerhub-username/your-app-name:${{ github.sha }}
+        docker push jainsachin8/dockerapi:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,7 +55,7 @@ jobs:
     - name: Deploy to Azure App Service
       uses: azure/webapps-deploy@v2
       with:
-        app-name: "your-azure-app-name"
+        app-name: "dockerapi"
         slot-name: "production"
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: ./
